--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,6 +27,9 @@ import riveWASMResource from "@rive-app/canvas/rive.wasm?url";
   article {
     max-width: 60ch;
     margin: auto;
+    display: flex;
+    flex-direction: column;
+    gap: var(--size-6);
   }
   main {
     font-size: var(--font-size-md);
