--- a/src/components/WhiteboardGsap.astro
+++ b/src/components/WhiteboardGsap.astro
@@ -3,9 +3,11 @@
 <svg width="983" height="1540" viewBox="0 0 983 1540" fill="none" xmlns="http://www.w3.org/2000/svg">
 <path d="M119 264C119 245.222 134.222 230 153 230H829C847.778 230 863 245.222 863 264V1276C863 1294.78 847.778 1310 829 1310H153C134.222 1310 119 1294.78 119 1276V264Z" fill="url(#paint0_linear_1_2)"/>
 <path d="M144 268C144 262.477 148.477 258 154 258H828C833.523 258 838 262.477 838 268V1272C838 1277.52 833.523 1282 828 1282H154C148.477 1282 144 1277.52 144 1272V268Z" fill="white"/>
+<g class="face">
 <path d="M419 691C435.856 709.824 464.452 724 509 724C553.548 724 582.144 709.824 599 691" stroke="#7824FF" stroke-width="33" stroke-linecap="round"/>
 <rect class="eye" x="279" y="533" width="33" height="149" rx="16.5" fill="#7824FF"/>
 <rect class="eye" x="706" y="533" width="33" height="149" rx="16.5" fill="#7824FF"/>
+</g>
 <defs>
 <linearGradient id="paint0_linear_1_2" x1="796" y1="273" x2="217" y2="1231" gradientUnits="userSpaceOnUse">
 <stop stop-color="#484848"/>
@@ -18,7 +20,41 @@
 <script>
 import {gsap} from 'gsap';
 
-gsap.timeline().to('.eye', {scaleY: 0.1, duration: 0.2}).to('.eye', {scaleY: 1, duration: 0.2});
+// blink
+const blinkAnim = gsap.timeline()
+    .set('.eye', {transformOrigin: 'center bottom'})
+    .to('.eye', {scaleY: 0.2, duration: 0.2})
+    .to('.eye', {scaleY: 1, duration: 0.2})
+    .repeatDelay(4)
+    .repeat(-1);
+
+const xPoolInitial = [-40, -20, 0, 20, 40];
+const yPoolInitial = [-40, 0, 40, 80, 120, 160, 200, 240, 280];
+
+function generateVal(poolInitial) {
+    let pool: number[] = [];
+    return () => {
+        if (pool.length === 0) {
+            pool = [...poolInitial];
+        }
+
+        const randIdx = gsap.utils.random(0, pool.length-1, 1);
+        const val = pool[randIdx]!;
+        pool.splice(randIdx, 1);
+        return val;
+    }
+}
+
+const faceAnim = gsap.to('.face', {
+        x: generateVal(xPoolInitial),
+        y: generateVal(yPoolInitial), 
+        repeatRefresh: true,
+        repeat: -1,
+    });
+
+gsap.timeline()
+    .add(blinkAnim)
+    .add(faceAnim);
 </script>
 
 <style>
