--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -47,6 +47,7 @@ const { title = "Ben Holmes", headings } = Astro.props;
 
 <style is:global>
   @import "open-props/style";
+  @import "open-props/easings";
   @import "../fonts.css";
   @import "open-props/normalize";
 
