--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -5,6 +5,7 @@ import atkinson400url from "@fontsource/atkinson-hyperlegible/files/atkinson-hyp
 import atkinson700url from "@fontsource/atkinson-hyperlegible/files/atkinson-hyperlegible-latin-700-normal.woff2?url";
 import Nav from "../components/Nav.astro";
 import type { MarkdownHeading } from "astro";
+import ScrollableBody from "../components/ScrollableBody.astro";
 
 type Props = {
   title?: string;
@@ -39,66 +40,66 @@ const { title = "Ben Holmes", headings } = Astro.props;
     <slot name="head" />
     <title>{title}</title>
   </head>
-  <body>
+  <ScrollableBody>
     <Nav headings={headings} />
     <slot />
-  </body>
-</html>
+  </ScrollableBody>
 
-<style is:global>
-  @import "open-props/style";
-  @import "open-props/easings";
-  @import "../fonts.css";
-  @import "open-props/normalize";
+  <style is:global>
+    @import "open-props/style";
+    @import "open-props/easings";
+    @import "../fonts.css";
+    @import "open-props/normalize";
 
-  :root {
-    --green: #24ac6c;
-    --red: #f3270b;
-    --purple-hs: 263.1 100%;
-    --purple: hsl(var(--purple-hs) 50%);
-    --font-size-sm: clamp(0.8rem, 0.17vw + 0.76rem, 0.89rem);
-    --font-size-base: clamp(1rem, 0.34vw + 0.91rem, 1.19rem);
-    --font-size-md: clamp(1.25rem, 0.61vw + 1.1rem, 1.58rem);
-    --font-size-lg: clamp(1.56rem, 1vw + 1.31rem, 2.11rem);
-    --font-size-xl: clamp(1.95rem, 1.56vw + 1.56rem, 2.81rem);
-    --font-size-xxl: clamp(2.44rem, 2.38vw + 1.85rem, 3.75rem);
-    --font-size-xxxl: clamp(3.05rem, 3.54vw + 2.17rem, 5rem);
-
-    --font-heading: "Sriracha", system-ui, -apple-system, BlinkMacSystemFont,
-      "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
-      "Helvetica Neue", sans-serif;
-
-    --font-body: "Atkinson Hyperlegible", system-ui, -apple-system,
-      BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
-      "Open Sans", "Helvetica Neue", sans-serif;
-
-    --font-size-1: var(--font-size-sm);
-    --font-size-2: var(--font-size-base);
-    --font-size-3: var(--font-size-md);
-    --font-size-4: var(--font-size-lg);
-    --font-size-5: var(--font-size-lg);
-    --font-size-6: var(--font-size-xl);
-    --font-size-7: var(--font-size-xl);
-    --font-size-8: var(--font-size-xxl);
-
-    --bg: var(--surface-1);
-  }
-
-  @media (prefers-color-scheme: dark) {
     :root {
-      --purple: hsl(var(--purple-hs) 57%);
+      --green: #24ac6c;
+      --red: #f3270b;
+      --purple-hs: 263.1 100%;
+      --purple: hsl(var(--purple-hs) 50%);
+      --font-size-sm: clamp(0.8rem, 0.17vw + 0.76rem, 0.89rem);
+      --font-size-base: clamp(1rem, 0.34vw + 0.91rem, 1.19rem);
+      --font-size-md: clamp(1.25rem, 0.61vw + 1.1rem, 1.58rem);
+      --font-size-lg: clamp(1.56rem, 1vw + 1.31rem, 2.11rem);
+      --font-size-xl: clamp(1.95rem, 1.56vw + 1.56rem, 2.81rem);
+      --font-size-xxl: clamp(2.44rem, 2.38vw + 1.85rem, 3.75rem);
+      --font-size-xxxl: clamp(3.05rem, 3.54vw + 2.17rem, 5rem);
+
+      --font-heading: "Sriracha", system-ui, -apple-system, BlinkMacSystemFont,
+        "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+        "Helvetica Neue", sans-serif;
+
+      --font-body: "Atkinson Hyperlegible", system-ui, -apple-system,
+        BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
+        "Open Sans", "Helvetica Neue", sans-serif;
+
+      --font-size-1: var(--font-size-sm);
+      --font-size-2: var(--font-size-base);
+      --font-size-3: var(--font-size-md);
+      --font-size-4: var(--font-size-lg);
+      --font-size-5: var(--font-size-lg);
+      --font-size-6: var(--font-size-xl);
+      --font-size-7: var(--font-size-xl);
+      --font-size-8: var(--font-size-xxl);
+
+      --bg: var(--surface-1);
     }
-  }
 
-  h1,
-  h2,
-  h3 {
-    font-family: var(--font-heading);
-  }
+    @media (prefers-color-scheme: dark) {
+      :root {
+        --purple: hsl(var(--purple-hs) 57%);
+      }
+    }
 
-  a,
-  a:visited {
-    color: var(--accent);
-    text-decoration: dotted underline;
-  }
-</style>
+    h1,
+    h2,
+    h3 {
+      font-family: var(--font-heading);
+    }
+
+    a,
+    a:visited {
+      color: var(--accent);
+      text-decoration: dotted underline;
+    }
+  </style>
+</html>
