feat: basic pagination done

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import InBrief from "../components/InBrief.astro";
 import Heading from "../components/Heading.astro";
 
 import riveWASMResource from "@rive-app/canvas/rive.wasm?url";
+import VideoScroller from "../components/VideoScroller.astro";
 ---
 
 <BaseLayout>
@@ -18,7 +19,7 @@ import riveWASMResource from "@rive-app/canvas/rive.wasm?url";
     <Heading />
     <article>
       <InBrief />
-      <InBrief />
+      <VideoScroller />
     </article>
   </main>
 </BaseLayout>
