chore(style): article padding

--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -25,11 +25,9 @@ const { Content, headings } = await post.render();
   main {
     max-width: 65ch;
     margin: auto;
+    padding-inline: var(--size-3);
   }
   main :global(p) {
     margin-block: var(--size-3);
-  }
-  main :global(article) {
-    margin-inline: var(--size-3);
   }
 </style>
