--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -90,5 +90,10 @@ const { title = "Ben Holmes", headings } = Astro.props;
     h3 {
       font-family: theme(fontFamily.heading);
     }
+
+    ul,
+    button {
+      font-family: theme(fontFamily.body);
+    }
   </style>
 </html>
