--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 import InBrief from "../components/InBrief.astro";
 import Heading from "../components/Heading.astro";
+import Computer from "../components/Computer.astro";
 ---
 
 <BaseLayout>
@@ -9,7 +10,7 @@ import Heading from "../components/Heading.astro";
     <Heading />
     <article class="max-w-prose m-auto flex flex-col gap-4">
       <InBrief />
-      <InBrief />
     </article>
+    <Computer />
   </main>
 </BaseLayout>
