Updated github link
THIS IS IMPORTANT

--- a/src/_layouts/index.pug
+++ b/src/_layouts/index.pug
@@ -101,7 +101,7 @@ html(lang="en-US")
                 +icon('twitter')
               a(href="https://www.youtube.com/channel/UCfFNverFD_Md_WDQGBBC7Zw" target="_blank" rel="noreferrer" aria-label="Ben's YouTube")
                 +icon('youtube')
-              a(href="https://github.com/holben888" target="_blank" rel="noreferrer" aria-label="Ben's GitHub")
+              a(href="https://github.com/bholmesdev" target="_blank" rel="noreferrer" aria-label="Ben's GitHub")
                 +icon('github')
             p Follow along with #[strong Ben] for the fun, for the whiteboards, and for the love of building websites ♥ 
 
