--- a/src/components/Computer.astro
+++ b/src/components/Computer.astro
@@ -1,17 +1,27 @@
 ---
 import iBen from "./iBen.svg?raw";
+
+const imgSrc = "https://img.youtube.com/vi/ZCdvjNTcT1I/hqdefault.jpg";
 ---
 
-<div class="dark:bg-gray-900 py-8">
-  <div
-    class="computer m-auto sm:px-12 max-w-prose aspect-square"
-    set:html={iBen}
-  />
+<div class="dark:bg-gray-900 sm:px-6 px-2">
+  <div class="max-w-prose mx-auto container grid">
+    <div class="computer z-10 m-auto w-full" set:html={iBen} />
+    <img
+      src={imgSrc}
+      alt="A gud video"
+      class="filter blur-sm w-full pt-[10%] px-[6%]"
+    />
+  </div>
 </div>
 
 <style>
   .computer :global(svg) {
     width: 100%;
     height: 100%;
+  }
+
+  .container > * {
+    grid-area: 1/1;
   }
 </style>
