feat(iBen): low effort pulse

--- a/src/components/Computer.astro
+++ b/src/components/Computer.astro
@@ -6,7 +6,12 @@ const imgSrc = "https://img.youtube.com/vi/MaebEqhZR84/hqdefault.jpg";
 
 <div class="dark:bg-gray-900 sm:px-6 px-2">
   <div class="max-w-prose mx-auto container grid relative">
-    <img src={imgSrc} alt="" class="glow pt-[0%] w-full" aria-hidden="true" />
+    <img
+      src={imgSrc}
+      alt=""
+      class="glow animate-pulse pt-[0%] w-full"
+      aria-hidden="true"
+    />
     <img
       src={imgSrc}
       alt="A gud video"
