feat(iBen): full cd drive animation

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,13 +2,13 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 import InBrief from "../components/InBrief.astro";
 import Heading from "../components/Heading.astro";
-import Computer from "../components/Computer.astro";
+import IBen from "../components/iBen/Frame.astro";
 ---
 
 <BaseLayout>
   <main>
     <Heading />
-    <Computer />
+    <IBen />
     <article class="max-w-prose m-auto flex flex-col gap-4">
       <InBrief />
     </article>
