--- a/src/components/iBen/Frame.astro
+++ b/src/components/iBen/Frame.astro
@@ -22,6 +22,9 @@ const imgSrc = "https://img.youtube.com/vi/MaebEqhZR84/hqdefault.jpg";
         alt="A gud video"
         class="filter blur-sm w-full aspect-[3/2] leading-none object-cover"
       />
+      <div data-scan-line-overlay class="absolute inset-0">
+        <div data-scan-line class="w-full h-1 bg-slate-200 opacity-30"></div>
+      </div>
     </div>
     <div data-computer class="z-10 m-auto w-full" set:html={iBen} />
     <div
@@ -36,6 +39,21 @@ const imgSrc = "https://img.youtube.com/vi/MaebEqhZR84/hqdefault.jpg";
 </div>
 
 <style>
+  [data-scan-line] {
+    animation: scan 4s linear infinite;
+    animation-delay: 1.3s;
+  }
+  [data-scan-line-overlay] {
+    background-image: linear-gradient(
+      180deg,
+      rgba(0, 0, 0, 0) 0%,
+      rgba(0, 0, 0, 0.1) 50%,
+      rgba(0, 0, 0, 0) 100%
+    );
+    background-size: 100% 6px;
+    background-repeat: repeat;
+  }
+
   [data-computer] :global(svg) {
     width: 100%;
     height: 100%;
@@ -94,6 +112,12 @@ const imgSrc = "https://img.youtube.com/vi/MaebEqhZR84/hqdefault.jpg";
     to {
       opacity: 1;
       scale: 1;
+    }
+  }
+  @keyframes scan {
+    to {
+      transform: translateY(400px);
+      opacity: 0;
     }
   }
 </style>
